# AnalogClock

./: .gitignore  .gitignore~  AnalogClock.pro  CMakeLists.txt  CMakeLists.txt~  README.md  analogclock.cpp  main.cpp
include/: analogclock.h
src/: analogclock.cpp  main.cpp
